--- a/website/assets/css/main.css
+++ b/website/assets/css/main.css
@@ -1,26 +1,17 @@
 body {
 	font-family: courier,sans-serif;
-	font-size: 25px;
+	font-size: 20px;
 	background-color: black;
 	color: white
 }
 
 a {
 	color:deeppink;
-	margin-top: 2vh;
+	margin-top: 10vh;
 	margin-left: 3vh;
-	font-size: 6vh;	
-	animation: textcolor 5s infinite-alternate;
-}
-
-@keyframes textcolor {
-	0% {
-		margin-left: 20px;
-	}
-
-	100% {
-		margin-left: 400px;
-	}
+	font-size: 7vh;	
+	letter-spacing: -0.07cm;
+	word-spacing: -0.20cm;
 }
 
 .intro {
@@ -37,8 +28,10 @@ a {
 }
 
 .memories {
-	margin-left: 680px;
-	margin-top: 40px;
+	margin-top: 6vh;
+	text-align: center;
+	font-size: 3vh;
+	font-family: courier;
 }
 
 /* buttons */
@@ -47,9 +40,9 @@ a {
 	font-size: 32px;
 	flex-wrap:wrap;
 	position: fixed;
-	top: 0px;
-	left: 1670px;
-	width:20%;
+	margin-top: 20px;
+	margin-left: 180vh;
+	width:10%;
 	flex-direction: column
 }
 
@@ -71,7 +64,7 @@ a {
 /* images style */
 
 .item {
-	width:33.333%%;
+	width:33.333%;
 	padding:30px;
 }
 
@@ -92,18 +85,73 @@ a {
 
 .cdbox img {
 	width: 30%;
-	margin-left: 580px;
-	padding: 10px;
-	margin-top: 80px;
-	align-content: center;
-	position: fixed;
+	margin-top: 60px;
+	margin-left: auto;
+	margin-right: auto;
+	display:block;
 }
 
 .cdbox img:hover {
 	width: 40%;
-	margin-left: 500px;
-	margin-top: 50px;
-	position: fixed;
-	align-content: center;
+	margin-top: 20px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+/* iphone */
+@media (max-width: 500px) {
+
+/* cd page */
+	a {
+		margin-left: 25px;
+		font-size: 4vh;
+	}
+
+	.item.small {
+		width: 100%;
+	}
+
+	.nav {
+		margin-left: 297px;
+		margin-top: 30px;
+		font-size: 22px;
+	}
+
+	.btn {
+		padding:1px;
+	}
+
+/* cd page end*/
+
+/* landing page */
+
+	.cdbox img {
+		width: 80%;
+		margin-top: 60px;
+		margin-left: auto;
+		margin-right: auto;
+		display:block;
+	}
+
+	.cdbox img:hover {
+		width: 100%;
+		margin-left: auto;
+		margin-right: auto;
+		display:block; 
+}
+
+	.intro {
+		margin-top: 20vh;
+		text-align: center;
+		font-size: 4vh;
+		font-family: courier;
+}
 
 }
+
+
+
+
+
+
+
